--- a/css/about.css
+++ b/css/about.css
@@ -7,22 +7,76 @@
 
 
 .about__video__container{
-    position: relative;
     width: 100%;
     max-width: 600px;
-    padding-top: 33%;
+    box-shadow: -3px 2px 8px 0px rgba(34, 60, 80, 0.2);
 }
 
-.about__video__container iframe {
+.video {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%;
+    background-color: #000000;
+}
+
+.video__link {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
     width: 100%;
     height: 100%;
 }
 
+.video__media {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+.video__button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    padding: 0;
+    width: 68px;
+    height: 48px;
+    border: none;
+    background-color: transparent;
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+}
+
+.video__button-shape {
+    fill: #212121;
+    fill-opacity: 0.8;
+}
+
+.video__button-icon {
+    fill: #ffffff;
+}
+
+.video__button:focus {
+    outline: none;
+}
+
+.video:hover .video__button-shape,
+.video__button:focus .video__button-shape {
+    fill: #ff0000;
+    fill-opacity: 1;
+}
+
+.video--enabled {
+    cursor: pointer;
+}
+
+.video--enabled .video__button {
+    display: block;
+}
 
 @media(max-width: 1200px) {
     .about__container{
@@ -30,9 +84,6 @@
         align-items: center;
         justify-content: center;
         gap: 30px;
-    }
-    .about__video__container{
-        padding-top: 56%;
     }
 }
 
