--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    padding: 25px;
+    padding:0 25px;
 }
 
 .header__logo{
@@ -93,6 +93,10 @@
     display: block;
 }
 
+body.hidden{
+    overflow: hidden;
+}
+
 
 @media(max-width: 1248px){
     .header__menu__items{
@@ -103,6 +107,10 @@
 @media(max-width: 991px){
     .burger{
         display: block;
+    }
+
+    .header__container{
+        padding: 0 10px;
     }
 
     .header__menu__clouse{
@@ -129,7 +137,9 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
+        overflow: auto;
+        gap: 40px;
+        padding: 40px 0;
     }
 
     .header__menu__container.menu__active{
@@ -139,11 +149,20 @@
     .header__menu__items{
         flex-direction: column;
         align-items: center;
-        justify-content: center;
         gap: 50px;
         height: 70%;
+        margin: 0;
+        padding: 0;
     }
     .header__menu__item{
-        font-size: 2rem;;
+        font-size: 2rem;
+
     }
 }
+
+/* @media(max-height: 500px){
+    .header__menu__container{
+        height: 500px;
+        overflow-y: auto;
+    }
+} */
