--- a/css/footer.css
+++ b/css/footer.css
@@ -33,3 +33,10 @@
     margin: 0;
 }
 
+@media(max-width: 676px){
+    .footer__container{
+        flex-direction: column;
+        align-items: start;
+        gap: 20px;
+    }
+}
