--- a/css/footer.css
+++ b/css/footer.css
@@ -8,20 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.footer__sertificats button{
-    background-color: #4CC082;
-    padding: 10px 30px;
-    border: none;
-    border-radius: 30px;
-    color: #fff;
-    font-family: 'Inter';
-    transition: all 0.3s;
-}
-
-.footer__sertificats button:hover{
-    background-color: #46ad76;
+    margin-bottom: 40px;
 }
 
 .contacts__items{
@@ -31,6 +18,15 @@
 .contacts__items ol{
     padding: 0;
     margin: 0;
+}
+
+.sertificait__image{
+    text-align: center;
+}
+
+.sertificait__image img{
+    width: 100%;
+    max-height: 700px;
 }
 
 @media(max-width: 676px){
