--- a/css/course.css
+++ b/css/course.css
@@ -1,3 +1,12 @@
 .course__name{
     text-align: center;
 }
+
+.course-title{
+    font-size: 14px;
+    text-align: center;
+}
+
+.course__name__container{
+    margin: 20px 0;
+}
