--- a/css/header.css
+++ b/css/header.css
@@ -6,15 +6,12 @@
     padding:0 25px;
 }
 
-.header__logo{
-    font-size: 1.5rem;
+.header{
+    max-width: 1280px;
+    margin: 0 auto;
 }
 
-.header__logo h2{
-    font-family: "Playfair Display", serif;
-    font-weight: bold;
-    color: #3e9b69;
-}
+
 
 .header__menu{
     display: flex;
@@ -31,8 +28,13 @@
 
 .header__menu__item{
     list-style: none;
-    font-size: 1.3rem;
+    font-size: 16px;
     font-weight: 700;
+    transition: all 0.3s;
+}
+
+.header__menu__item{
+    color: #104e9a;
 }
 
 .burger{
@@ -153,6 +155,7 @@ body.hidden{
         height: 70%;
         margin: 0;
         padding: 0;
+        
     }
     .header__menu__item{
         font-size: 2rem;
