--- a/css/start.css
+++ b/css/start.css
@@ -25,8 +25,21 @@
     }
 }
 
+@media(max-width: 991px){
+    .start__title{
+        font-size: 2.5rem;
+    }
+    
+}
+
 @media(max-width: 768px){
     .start__title{
         font-size: 2.3rem;
+    }
+}
+
+@media(max-width: 400px){
+    .start__title{
+        font-size: 2rem;
     }
 }
